02-sgr/_ec2.tf
resource "aws_security_group" "ec2" {
  name        = local.ec2_name
  tags        = local.ec2_tags

  vpc_id = data.terraform_remote_state.vpc.outputs.vpc_id

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 9990
    to_port     = 9990
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"] # é melhor que aqui esteja só ips de dentro da subnet e os ips que a aplicação precise acessar externamente, como webhooks
  }
}
